--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
         "@radix-ui/react-toggle-group": "^1.1.2",
         "@radix-ui/react-tooltip": "^1.1.8",
         "@tailwindcss/vite": "^4.1.11",
+        "@tanstack/react-query": "^5.90.2",
+        "@tanstack/react-query-devtools": "^5.90.2",
         "@tiptap/extension-bullet-list": "^3.4.3",
         "@tiptap/extension-dropcursor": "^3.4.4",
         "@tiptap/extension-gapcursor": "^3.4.4",
