--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "types": "tsc --noEmit"
     },
     "devDependencies": {
+        "@babel/plugin-transform-react-jsx": "^7.27.1",
         "@eslint/js": "^9.19.0",
         "@types/node": "^22.13.5",
         "eslint": "^9.17.0",
@@ -20,7 +21,9 @@
         "prettier": "^3.4.2",
         "prettier-plugin-organize-imports": "^4.1.0",
         "prettier-plugin-tailwindcss": "^0.6.11",
-        "typescript-eslint": "^8.23.0"
+        "typescript-eslint": "^8.23.0",
+        "vite-plugin-pwa": "^1.1.0",
+        "workbox-window": "^7.3.0"
     },
     "dependencies": {
         "@headlessui/react": "^2.2.0",
@@ -74,7 +77,8 @@
         "tailwindcss": "^4.0.0",
         "tailwindcss-animate": "^1.0.7",
         "typescript": "^5.7.2",
-        "vite": "^7.0.4"
+        "vite": "^7.0.4",
+        "web-vitals": "^5.1.0"
     },
     "optionalDependencies": {
         "@rollup/rollup-linux-x64-gnu": "4.9.5",
